Appraise info group (part)